--- a/Biblioteca/src/com/ps/views/InterfacePesquisa.form
+++ b/Biblioteca/src/com/ps/views/InterfacePesquisa.form
@@ -122,6 +122,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTable1MousePressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
