--- a/Biblioteca/src/com/ps/views/InterfaceRetirada.form
+++ b/Biblioteca/src/com/ps/views/InterfaceRetirada.form
@@ -147,6 +147,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Devolver Livro"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
